--- a/tests/test_string.scss
+++ b/tests/test_string.scss
@@ -1,4 +1,4 @@
-@use "../node_modules/sass-true/sass/true" as *;
+@use "true" as *;
 @use "../src/string";
 
 @include describe("string (extensions)"){
