Flatten usage of modules and use named constant for `$prefixed`
Rather than a hard-coded literal in `@function` definitions. This is to
provide compatibility with `libsass` somewhat, which treats `@use` as
`@import` and does not recognize `@forward` at all.

--- a/src/__main.scss
+++ b/src/__main.scss
@@ -13,6 +13,11 @@ $RESPONSIVE_IMAGE_SIZES: (
 ) !default;
 
 
-@forward "./string";
-@forward "./responsive";
-@forward "./cloudinary";
+// Only usable by `npm sass` / `dart-sass` ATM
+@forward "string";
+@forward "responsive";
+@forward "cloudinary";
+
+@import "string";
+@import "responsive";
+@import "cloudinary";
